[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/SpiderBounds/SpiderBounds.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="SpiderBounds" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftEdgeBound" type="StaticBody2D" parent="."]
collision_layer = 3221225472
collision_mask = 0

[node name="ColShape" type="CollisionShape2D" parent="LeftEdgeBound"]
shape = SubResource( 1 )

[node name="RightEdgeBound" type="StaticBody2D" parent="."]
collision_layer = 3221225472
collision_mask = 0

[node name="ColShape" type="CollisionShape2D" parent="RightEdgeBound"]
shape = SubResource( 1 )
